--- a/ml_classification/data_cleanup.ipynb
+++ b/ml_classification/data_cleanup.ipynb
@@ -16,7 +16,7 @@
     "cordis_df = pd.read_excel('../input/Cordis_input.xlsx', usecols=['objective'])\n",
     "cordis_df = cordis_df.rename(columns={'objective': 'text'})\n",
     "cordis_df['label'] = 'cordis'\n",
-    "cordis_df.to_csv('data.csv', index=False)"
+    "cordis_df.to_csv('training_data.csv', index=False)"
    ],
    "outputs": [],
    "execution_count": 17
@@ -33,7 +33,7 @@
     "crunch_df = pd.read_excel('../input/Crunchbase_input.xlsx', usecols=['Full Description'])\n",
     "crunch_df = crunch_df.rename(columns={'Full Description': 'text'})\n",
     "crunch_df['label'] = 'crunchbase'\n",
-    "crunch_df.to_csv('data.csv', mode='a', index=False, header=False)"
+    "crunch_df.to_csv('training_data.csv', mode='a', index=False, header=False)"
    ],
    "id": "12908e3a4442be32",
    "outputs": [],
@@ -51,7 +51,7 @@
     "wipo_df = pd.read_excel('../input/WIPO_input.xlsx', usecols=['Abstract'])\n",
     "wipo_df = wipo_df.rename(columns={'Abstract': 'text'})\n",
     "wipo_df['label'] = 'wipo'\n",
-    "wipo_df.to_csv('data.csv', mode='a', index=False, header=False)"
+    "wipo_df.to_csv('training_data.csv', mode='a', index=False, header=False)"
    ],
    "id": "1bdaebe6b10b7446",
    "outputs": [],
@@ -69,7 +69,7 @@
     "wos_df = pd.read_excel('../input/WOS_input.xlsx', usecols=['Abstract'])\n",
     "wos_df = wos_df.rename(columns={'Abstract': 'text'})\n",
     "wos_df['label'] = 'wos'\n",
-    "wos_df.to_csv('data.csv', mode='a', index=False, header=False)"
+    "wos_df.to_csv('training_data.csv', mode='a', index=False, header=False)"
    ],
    "id": "b8143ab5a2aadd7d",
    "outputs": [],
@@ -86,8 +86,8 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Read the data from data.csv\n",
-    "data_df = pd.read_csv('data.csv')\n",
+    "# Read the data from training_data.csv\n",
+    "data_df = pd.read_csv('training_data.csv')\n",
     "\n",
     "# Function to count words in a text\n",
     "def word_count(text):\n",
@@ -98,8 +98,8 @@
     "# Filter out rows with less than 10 words in the text column\n",
     "data_df = data_df[data_df['text'].apply(word_count) >= 10]\n",
     "\n",
-    "# Save the cleaned data back to data.csv\n",
-    "data_df.to_csv('data.csv', index=False)"
+    "# Save the cleaned data back to training_data.csv\n",
+    "data_df.to_csv('training_data.csv', index=False)"
    ],
    "id": "cb85a356c2f1f589",
    "outputs": [],
