--- a/ml_classification/training.ipynb
+++ b/ml_classification/training.ipynb
@@ -6,14 +6,14 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-03-15T20:56:25.712326Z",
-     "start_time": "2025-03-15T20:56:25.396276Z"
+     "end_time": "2025-03-25T18:07:23.822342Z",
+     "start_time": "2025-03-25T18:07:23.436866Z"
     }
    },
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df_unbalanced = pd.read_csv('data.csv')\n",
+    "df_unbalanced = pd.read_csv('data_input/training_data.csv')\n",
     "\n",
     "df = df_unbalanced.groupby('label', group_keys=False).apply(\n",
     "    lambda x: x.sample(n=min(len(x), 900), random_state=19)\n",
@@ -27,18 +27,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_257611/4082056144.py:5: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "/tmp/ipykernel_196847/2956980612.py:5: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  df = df_unbalanced.groupby('label', group_keys=False).apply(\n"
      ]
     }
    ],
-   "execution_count": 53
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-15T20:56:25.722780Z",
-     "start_time": "2025-03-15T20:56:25.718080Z"
+     "end_time": "2025-03-25T18:07:28.898901Z",
+     "start_time": "2025-03-25T18:07:28.890886Z"
     }
    },
    "cell_type": "code",
@@ -55,18 +55,18 @@
        "2996"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 54
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-15T20:56:25.780958Z",
-     "start_time": "2025-03-15T20:56:25.773546Z"
+     "end_time": "2025-03-19T09:00:39.760009Z",
+     "start_time": "2025-03-19T09:00:39.368480Z"
     }
    },
    "cell_type": "code",
@@ -84,18 +84,18 @@
        "2396"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 55
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-15T20:56:25.826093Z",
-     "start_time": "2025-03-15T20:56:25.823111Z"
+     "end_time": "2025-03-25T18:07:42.583672Z",
+     "start_time": "2025-03-25T18:07:42.502695Z"
     }
    },
    "cell_type": "code",
@@ -104,85 +104,121 @@
     "from sklearn.svm import LinearSVC\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.metrics import classification_report, accuracy_score"
+    "from sklearn.metrics import classification_report, accuracy_score\n",
+    "import joblib"
    ],
    "id": "9ccdcef07b988ee4",
    "outputs": [],
-   "execution_count": 56
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-15T20:56:25.874338Z",
-     "start_time": "2025-03-15T20:56:25.870283Z"
+     "end_time": "2025-03-19T09:00:39.820662Z",
+     "start_time": "2025-03-19T09:00:39.817307Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "pipeMNB = Pipeline([('tfidf', TfidfVectorizer()), ('clf', MultinomialNB())])\n",
-    "pipeCNB = Pipeline([('tfidf', TfidfVectorizer()), ('clf', ComplementNB())])\n",
-    "pipeSVC = Pipeline([('tfidf', TfidfVectorizer()), ('clf', LinearSVC())])"
+    "pipeMNB = Pipeline([('tfidf', TfidfVectorizer(stop_words='english')), ('clf', MultinomialNB())])\n",
+    "pipeCNB = Pipeline([('tfidf', TfidfVectorizer(stop_words='english')), ('clf', ComplementNB())])\n",
+    "pipeSVC = Pipeline([('tfidf', TfidfVectorizer(stop_words='english')), ('clf', LinearSVC())])"
    ],
    "id": "9be16bcce6634536",
    "outputs": [],
-   "execution_count": 57
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-15T20:56:26.140586Z",
-     "start_time": "2025-03-15T20:56:25.920411Z"
+     "end_time": "2025-03-19T09:00:40.588394Z",
+     "start_time": "2025-03-19T09:00:39.869564Z"
     }
    },
    "cell_type": "code",
    "source": [
     "pipeMNB.fit(X_train, y_train)\n",
+    "pipeCNB.fit(X_train, y_train)\n",
+    "pipeSVC.fit(X_train, y_train)\n",
+    "\n",
     "predictMNB = pipeMNB.predict(X_test)\n",
-    "accuracy_score(y_test, predictMNB)"
+    "predictCNB = pipeCNB.predict(X_test)\n",
+    "predictSVC = pipeSVC.predict(X_test)\n",
+    "\n",
+    "print(accuracy_score(y_test, predictMNB))\n",
+    "print(accuracy_score(y_test, predictCNB))\n",
+    "print(accuracy_score(y_test, predictSVC))"
    ],
    "id": "fea01b9b27e75040",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8383333333333334"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 58
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-03-15T20:59:08.368859Z",
-     "start_time": "2025-03-15T20:59:08.363655Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "# userText = \"\"\"While working together at Plaid, our founders Julianna and Reed witnessed the security and user-experience shortcomings of dated authentication methods. They saw firsthand the endless frustration experienced by teams — engineers wasting valuable time building authentication solutions instead of focusing on their own product and users suffering the pain of clunky authentication experiences.\n",
-    "#\n",
-    "# To solve this, they set out to build an all-in-one platform for modern authentication. A full suite of passwordless solutions and password-based auth, rebooted for the modern age.\"\"\"\n",
-    "\n",
-    "userText = \"\"\"Methods and systems for updating a calendar entry for an accommodation listing are disclosed. In one embodiment, the method comprises generating an availability model and an acceptance model for an accommodation listing in an accommodation reservation system and determining based on those models the probability that the accommodation listing would be able to be booked. Furthermore, the result of an accommodation search query can be filtered and/or sorted using the determined probability of booking.”\"\"\"\n",
-    "prediction = pipeMNB.predict([userText])\n",
-    "print(prediction)"
-   ],
-   "id": "759ffecebd0d289b",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['wipo']\n"
+      "0.8466666666666667\n",
+      "0.88\n",
+      "0.9366666666666666\n"
      ]
     }
    ],
-   "execution_count": 61
+   "execution_count": 7
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-25T18:07:44.368111Z",
+     "start_time": "2025-03-25T18:07:44.223125Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# joblib.dump(pipeMNB, 'model_mnb.pkl')\n",
+    "# joblib.dump(pipeCNB, 'model_cnb.pkl')\n",
+    "# joblib.dump(pipeSVC, 'model_svc.pkl')\n",
+    "\n",
+    "\n",
+    "# load back the models\n",
+    "pipeMNB = joblib.load('model_mnb.pkl')\n",
+    "pipeCNB = joblib.load('model_cnb.pkl')\n",
+    "pipeSVC = joblib.load('model_svc.pkl')"
+   ],
+   "id": "759ffecebd0d289b",
+   "outputs": [],
+   "execution_count": 9
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-25T18:07:45.887849Z",
+     "start_time": "2025-03-25T18:07:45.684860Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "X_wipo = df[df['label'] == 'wipo']['text']\n",
+    "Y_wipo = df[df['label'] == 'wipo']['label']\n",
+    "\n",
+    "predict_svc_wipo = pipeSVC.predict(X_wipo)\n",
+    "predict_cnb_wipo = pipeCNB.predict(X_wipo)\n",
+    "predict_mnb_wipo = pipeMNB.predict(X_wipo)\n",
+    "\n",
+    "print('Accuracy SVC wipo:', accuracy_score(Y_wipo, predict_svc_wipo))\n",
+    "print('Accuracy CNB wipo:', accuracy_score(Y_wipo, predict_cnb_wipo))\n",
+    "print('Accuracy MNB wipo:', accuracy_score(Y_wipo, predict_mnb_wipo))"
+   ],
+   "id": "e8feab8f8fb1bcea",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy SVC wipo: 0.99\n",
+      "Accuracy CNB wipo: 0.9555555555555556\n",
+      "Accuracy MNB wipo: 0.9377777777777778\n"
+     ]
+    }
+   ],
+   "execution_count": 10
   }
  ],
  "metadata": {
